# GeoComPy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-test-containers.yml  python-publish.yml  python-test-publish.yml  run-tests.yml
docs/: conf.py  connections.rst  index.rst  introduction.rst  latexindex.rst  overview.rst  requirements.txt
docs/_static/css/: custom.css
docs/api/: communication.rst  data.rst  data_geocom.rst  data_gsi.rst  index.rst  protocols.rst
docs/api/dna/: index.rst  measurements.rst  meta.rst  settings.rst
docs/api/geo/: aus.rst  aut.rst  bap.rst  bmm.rst  cam.rst  com.rst  csv.rst  ctl.rst  edm.rst  ftr.rst  gctypes.rst  img.rst  kdm.rst  mot.rst  sup.rst  tmc.rst  wir.rst
docs/api/gsi/: gsidata.rst  gsiformat.rst  gsitypes.rst  index.rst
docs/api/gsi/dna/: index.rst  measurements.rst  settings.rst
docs/api/tps1000/: bap.rst  bmm.rst  com.rst  csv.rst  ctl.rst  edm.rst  index.rst  mot.rst  rc.rst  sup.rst  tmc.rst  wir.rst
docs/api/tps1100/: aus.rst  aut.rst  bap.rst  bmm.rst  com.rst  csv.rst  ctl.rst  edm.rst  index.rst  mot.rst  rc.rst  sup.rst  tmc.rst  wir.rst
docs/api/tps1200p/: aus.rst  aut.rst  bap.rst  bmm.rst  com.rst  csv.rst  edm.rst  ftr.rst  grc.rst  img.rst  index.rst  mot.rst  sup.rst  tmc.rst
docs/api/vivatps/: aus.rst  aut.rst  bap.rst  bmm.rst  cam.rst  com.rst  csv.rst  edm.rst  ftr.rst  grc.rst  img.rst  index.rst  kdm.rst  mot.rst  sup.rst  tmc.rst
docs/apps/: geocom_license_test.rst  geocomtest.rst  morse.rst  setmeasurement.rst  setup.rst  terminal.rst
docs/apps/setmeasurement/: calc.rst  index.rst  measure.rst  merge.rst  process.rst  setup.rst  validate.rst
examples/: geocom_license_test.py  morse.py
geocompy/: __init__.py  communication.py  data.py  tps1200.py  tps1200p.py
geocompy/tps1200p/: __init__.py  aus.py  csv.py  ftr.py  grc.py  img.py  mot.py  tmc.py
geocompy/vivatps/: cam.py  csv.py  edm.py  ftr.py  grc.py  mot.py
src/geocompy/: __init__.py  communication.py  data.py  data_gsi.py  protocols.py
src/geocompy/apps/: __init__.py  __main__.py  geocom_license_test.py  geocomtest.py  morse.py  resection.py  setup.py  targets.py  utils.py
src/geocompy/apps/setmeasurement/: __init__.py  __main__.py  cli.py  measure.py  process.py  schema_session.json  sessions.py  setup.py  target_schema.json  targets.py
src/geocompy/apps/terminal/: __init__.py
src/geocompy/dna/: __init__.py  measurements.py  meta.py  settings.py
src/geocompy/gc/: data_gc.py  meta_gc.py  response_gc.py
src/geocompy/geo/: __init__.py  aus.py  aut.py  bap.py  bmm.py  cam.py  com.py  csv.py  ctl.py  dna.py  edm.py  ftr.py  gcdata.py  gctypes.py  img.py  kdm.py  mot.py  sup.py  tmc.py  wir.py
src/geocompy/gsi/: __init__.py  gsiformat.py  gsitypes.py
src/geocompy/gsi/dna/: __init__.py  measurements.py  settings.py
src/geocompy/tps1000/: __init__.py  aut.py  bap.py  bmm.py  com.py  csv.py  ctl.py  edm.py  mot.py  rc.py  sup.py  tmc.py  wir.py
src/geocompy/tps1100/: __init__.py  aus.py  aut.py  bap.py  bmm.py  com.py  csv.py  ctl.py  edm.py  mot.py  rc.py  sup.py  tmc.py  wir.py
src/geocompy/tps1200p/: __init__.py  aus.py  aut.py  bap.py  bmm.py  com.py  csv.py  edm.py  ftr.py  grc.py  img.py  mot.py  sup.py  tmc.py
src/geocompy/vivatps/: __init__.py  aus.py  aut.py  bap.py  bmm.py  cam.py  com.py  csv.py  edm.py  ftr.py  grc.py  img.py  kdm.py  mot.py  sup.py  tmc.py
src/geocompy_apps/: __init__.py  terminal.py
tests/: conftest.py  helpers.py  helpers_geocom.py  helpers_gsionline.py  test_communication.py  test_data.py  test_dna.py  test_geocom.py  test_gsiformat.py  test_resection.py  test_tps1000.py  test_tps1100.py  test_tps1200p.py  test_vivatps.py
tests/docker/: test_python311.dockerfile  test_python312.dockerfile  test_python313.dockerfile  test_pyton11.dockerfile
